--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <head>
     <title>Odds and Events</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="./index.css" />
+    <script src="./index.js" defer></script>
   </head>
   <body>
+    <h1>Odds and Events</h1>
+    <section>
+      <h2>Add a number to the bank</h2>
+      <form>
+        <input id="" placeholder="" />
+
+        <button>Add number</button>
+        <button>Sort 1</button>
+        <button>Sort All</button>
+      </form>
+    </section>
+
     <div id="app"></div>
   </body>
 </html>
