second commit, added const functions and arrow functions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
       <h2>Add a number to the bank</h2>
       <form>
-        <input id="" placeholder="" />
+        <input id="number-input" placeholder="" />
 
         <button>Add number</button>
         <button>Sort 1</button>
