--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <script src="./index.js" defer></script>
   </head>
   <body>
-    <h1>Odds and Events</h1>
+    <!-- <h1>Odds and Events</h1> -->
     <section>
-      <h2>Add a number to the bank</h2>
+      <!-- <h2>Add a number to the bank</h2> -->
       <form>
-        <input id="number-input" placeholder="" />
+        <!-- <input id="number-input" placeholder="" /> -->
 
-        <button>Add number</button>
+        <!-- <button>Add number</button>
         <button>Sort 1</button>
         <button>Sort All</button>
-      </form>
+      </form> -->
     </section>
 
     <div id="app"></div>
