added a couple things we worked on in class

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- <h1>Odds and Events</h1> -->
     <section>
       <!-- <h2>Add a number to the bank</h2> -->
-      <form>
-        <!-- <input id="number-input" placeholder="" /> -->
+      <!-- <form> -->
+      <!-- <input id="number-input" placeholder="" /> -->
 
-        <!-- <button>Add number</button>
+      <!-- <button>Add number</button>
         <button>Sort 1</button>
         <button>Sort All</button>
       </form> -->
